# NeuralScanner

./: .gitignore  Icon.sketch  Makefile  NeuralScanner.sln  ObjectInfo.json  version.sh
NativeJunk/: ApiDefinition.cs  Makefile  NativeJunk.csproj  NativeJunk.mm  PointRegistration.cs  Structs.cs
NativeJunk/OpenGR/apps/: CMakeLists.txt  demo-utils.h
NativeJunk/OpenGR/apps/ExtPointBinding/: CMakeLists.txt  external_point_binding_test.cc
NativeJunk/OpenGR/apps/ExtPointBinding/ext/: point_conversion.h  point_extlib1.hpp  point_extlib2.hpp  pointadapter_extlib1.hpp  pointadapter_extlib2.hpp
NativeJunk/OpenGR/apps/PCLWrapper/: CMakeLists.txt  main.cpp
NativeJunk/OpenGR/apps/Super4PCS/: CMakeLists.txt  super4pcs_test.cc
NativeJunk/OpenGR/src/: nanoflann.hpp
NativeJunk/lib/: README.md
NeuralScanner/: AppDelegate.fs  AutoLayout.fs  BaseViewController.fs  CaptureViewController.fs  FramesViewController.fs  GettingStartedViewController.fs  Info.plist  LossGraphView.fs  Main.fs  Main.storyboard  Meshes.fs  NeuralScanner.fsproj  ObjectInfo.fs  Project.fs  ProjectSettingsViewController.fs  ProjectViewController.fs  ProjectsViewController.fs  RenderViewController.fs  SceneKitGeometry.fs  SceneUtils.fs  SdfDataSource.fs  SdfFrame.fs  SdfFrameRegistration.fs  Tensors.fs  TrainViewController.fs  TrainingService.fs  UIControls.fs  ViewController.fs  packages.config
NeuralScanner/Resources/: SDF.cs
ObjTool/: ObjTool.fsproj  Program.fs
ObjectToSdf/: AppDelegate.fs  Info.plist  Main.fs  Main.storyboard  ObjectToSdf.fsproj  packages.config
(+4 files in other folders)
